<?xml version="1.0" encoding="utf-8"?><!--
  ~    Copyright 2018 Loremar Marabillas
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white">

    <ImageView
        android:id="@+id/fragment_finishedtasks_listitem_check"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/fragment_finishedtasks_listitem_check_size"
        android:layout_marginStart="@dimen/fragment_finishedtasks_listitem_check_leftmargin"
        android:layout_marginLeft="@dimen/fragment_finishedtasks_listitem_check_leftmargin"
        android:layout_marginTop="@dimen/fragment_finishedtasks_listitem_check_verticalmargin"
        android:adjustViewBounds="true"
        android:contentDescription="@string/fragment_finishedtasks_listitem_checked_contentdescription"
        android:src="@drawable/ic_checked"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fragment_finishedtasks_textview" />

    <TextView
        android:id="@+id/fragment_finishedtasks_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/fragment_finishedtasks_listitem_textview_horizontalpadding"
        android:paddingTop="@dimen/fragment_finishedtasks_listitem_textview_verticalpadding"
        android:paddingRight="@dimen/fragment_finishedtasks_listitem_textview_horizontalpadding"
        android:paddingBottom="@dimen/fragment_finishedtasks_listitem_textview_verticalpadding"
        android:text="@string/fragment_finishedtasks_listitem_textview_defaulttext"
        android:textAppearance="@style/FinishedTasksListItemTextViewTextAppearance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/fragment_finishedtasks_listitem_check"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fragment_finishedtasks_listitem_datefinished"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/fragment_finishedtasks_listitem_datefinished_rightmargin"
        android:text="@string/fragment_finisgedtasks_listitem_datefinished_defaulttext"
        android:textAppearance="@style/FinishedTasksListItemDateFinishedTextAppearance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_finishedtasks_textview"
        android:layout_marginEnd="@dimen/fragment_finishedtasks_listitem_datefinished_rightmargin" />

    <View
        android:id="@+id/fragment_finishedtasks_lisitem_divider"
        android:layout_width="0dp"
        android:layout_height="@dimen/fragment_finishedtasks_listitem_divider_height"
        android:background="@color/activity_maininapp_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_finishedtasks_listitem_datefinished" />
</android.support.constraint.ConstraintLayout>