<?xml version="1.0" encoding="utf-8"?><!--
  ~    Copyright 2018 Loremar Marabillas
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/activity_maininapp_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/activity_maininapp_toolbar_background"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/toolbarStyle">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/activity_maininapp_user"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="@style/MainInAppUserTextAppearance"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/activtiy_maininapp_reloadtool"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_maininapp_tool_verticalmargin"
                android:layout_marginEnd="@dimen/activity_maininapp_tool_rightmargin"
                android:layout_marginRight="@dimen/activity_maininapp_tool_rightmargin"
                android:layout_marginBottom="@dimen/activity_maininapp_tool_verticalmargin"
                android:drawableTop="@drawable/ic_reload"
                android:gravity="center"
                android:text="@string/activity_maininapp_reloadtool"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/activity_maininapp_helptool"
                app:layout_constraintTop_toBottomOf="@+id/activity_maininapp_user" />

            <TextView
                android:id="@+id/activity_maininapp_helptool"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_maininapp_tool_verticalmargin"
                android:layout_marginEnd="@dimen/activity_maininapp_tool_rightmargin"
                android:layout_marginRight="@dimen/activity_maininapp_tool_rightmargin"
                android:layout_marginBottom="@dimen/activity_maininapp_tool_verticalmargin"
                android:drawableTop="@drawable/ic_help_outline"
                android:gravity="center"
                android:text="@string/activity_maininapp_helptool"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/activity_maininapp_abouttool"
                app:layout_constraintTop_toBottomOf="@+id/activity_maininapp_user" />

            <TextView
                android:id="@+id/activity_maininapp_abouttool"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_maininapp_tool_verticalmargin"
                android:layout_marginEnd="@dimen/activity_maininapp_tool_rightmargin"
                android:layout_marginRight="@dimen/activity_maininapp_tool_rightmargin"
                android:layout_marginBottom="@dimen/activity_maininapp_tool_verticalmargin"
                android:drawableTop="@drawable/ic_info"
                android:gravity="center"
                android:text="@string/activity_maininapp_abouttool"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/activity_maininapp_logouttool"
                app:layout_constraintTop_toBottomOf="@+id/activity_maininapp_user" />

            <TextView
                android:id="@+id/activity_maininapp_logouttool"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_maininapp_tool_verticalmargin"
                android:layout_marginEnd="@dimen/activity_maininapp_tool_rightmargin"
                android:layout_marginRight="@dimen/activity_maininapp_tool_rightmargin"
                android:layout_marginBottom="@dimen/activity_maininapp_tool_verticalmargin"
                android:drawableTop="@drawable/ic_power"
                android:gravity="center"
                android:text="@string/activity_maininapp_logouttool"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/activity_maininapp_user" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.Toolbar>

    <android.support.v4.view.ViewPager
        android:id="@+id/activity_maininapp_viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/activity_maininapp_page_background"
        android:overScrollMode="never"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_maininapp_toolbar" />


</android.support.constraint.ConstraintLayout>